<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/restaurant_item"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/icon_height"
    android:layout_marginTop="@dimen/margin_vertical"
    android:orientation="horizontal"
    android:paddingStart="@dimen/padding_horizontal_10"
    android:paddingEnd="@dimen/padding_horizontal_10">


    <ImageView
        android:id="@+id/restaurant_icon"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_height"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:contentDescription="@string/restaurant_icon"
        android:paddingTop="@dimen/padding_vertical_1"
        android:paddingBottom="@dimen/padding_vertical_1"
        android:scaleType="fitCenter"
        android:src="@drawable/crazy_rock_n_sushi" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_vertical_1"
            android:paddingBottom="@dimen/padding_vertical_1"
            android:text="@string/name_esperanza"
            android:textSize="@dimen/header_font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restaurant_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_vertical_1"
            android:paddingBottom="@dimen/padding_vertical_1"
            android:text="@string/location_esperanza"
            android:textSize="@dimen/details_font_size" />

        <TextView
            android:id="@+id/restaurant_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_vertical_1"
            android:paddingBottom="@dimen/padding_vertical_1"
            android:text="@string/type_esperanza"
            android:textSize="@dimen/details_font_size" />

        <TextView
            android:id="@+id/restaurant_cost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_vertical_1"
            android:paddingBottom="@dimen/padding_vertical_1"
            android:text="@string/cost_esperanza"
            android:textSize="@dimen/details_font_size" />
    </LinearLayout>

</LinearLayout>